Add /metadata endpoint
